--- a/A01_Masteer_Math_By_Coding_in_Python/B14_Number theory/C156_Plotting_number_sequences.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B14_Number theory/C156_Plotting_number_sequences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "8623235a",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
